syntax = "proto3";

option csharp_namespace = "MyProto";

package my_service;

// The client must send in gRPC metadata:
//   - "authorization": "<token>" (JWT or other token after Login. Required for all methods except Login)
//   - "session-id": "<session_id>" (session identifier. Required for all methods)
service MyServiceAPI {
  rpc MyServiceEcho(EchoRequest) returns (EchoResponse);
  rpc MyServiceSubscribe(EchoRequest) returns (stream EchoResponse);
  rpc MyServiceShutdown(ShutdownRequest) returns (ShutdownResponse);
}

message EchoRequest {
  string value = 1;
}

message EchoResponse {
  string client_value = 1;
  string server_value = 2;
  string pod_name = 3;
  string server_session_id = 4;
  string client_session_id = 5;
  int32 index = 6;
  string server_method = 7;
}

message ShutdownRequest {}

message ShutdownResponse {
  string pod_name = 1;
  string server_session_id = 2;
  string client_session_id = 3;
  int32 index = 4;
  string server_method = 5;
}
